agregamos un hola

--- a/blogstop.html
+++ b/blogstop.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <link rel="stylesheet" href="css/estilo.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +12,7 @@
 
     <h1>hello this my blog</h1>
     <p>this blog your show </p>
-    <p2>hola perra</p2>
+    <p>hola perra</p>
     <img src="imagen.jpg" alt="300">
 </body>
 </html>
