agregue un subtitulo

--- a/blogstop.html
+++ b/blogstop.html
@@ -12,6 +12,7 @@
 
     <h1>hello this my blog</h1>
     <p>this blog your show </p>
+    <h2>hi may world</h2>
     <p>hola perra</p>
     <img src="imagen.jpg" alt="300">
 </body>
